# seed

./: Cargo.toml  README.md  bootstrap.py  bootstrap.sh  create_loop.sh  run_test.sh
docs/: install.json  installation_file.yaml
glade-files/: glade_test.py  template.glade  template.glade~
package/src/: main.py
package/src/tools/: dep_check.py
package/src/ui/: gtk_main.py
src/: installfile.rs  leaf.rs  libc.rs  main.py  main.rs
src/conf/: disk.rs  installfile.rs  mod.rs  part.rs  seed.rs  size.rs  validate.rs
src/diskmgr/: diskmanager.rs  filesystem.rs  mod.rs  mount.rs  part.rs  util.rs
src/diskutil/: blk_dev.py
src/tools/: dep_check.py
