[package]
name = "seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	rleaf = { git = "https://github.com/AcaciaLinux/rleaf", branch = "main" }
	log = "0.4"
	pretty_env_logger = "0.4"
	libparted = "0.1.5"
	serde_json = "1.0.91"
	serde = { version = "1.0.152", features = ["derive"] }
